kubernetes/ckad/webapp/webapp-mysql/webapp-mysql-db-service.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: webapp
  name: mysql
  labels:
    app: webapp-mysql-db
spec:
  selector:
    app: webapp-mysql-db
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
